examples/errors/private_member_multiline_error.flx
module Math {
  fn _secret() { 1; }
}

module Main {
  fn main() {
    Math
      ._secret();
  }
}
